force-app/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/GW_Volunteers__Display_on_Website__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Display_on_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marque este campo si este Trabajo Voluntario debe ser incluido como disponible en la página web de Trabajos Voluntarios..</inlineHelpText>
    <label>Display on Website</label>
    <type>Checkbox</type>
</CustomField>