force-app/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/GW_Volunteers__Inactive__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marque esta casilla si este Trabajo Voluntario ya no está activo. No se lo incluirá en la página web de Informes de Horas de Voluntariado.</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>