force-app/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/GW_Volunteers__Location_Information__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Location_Information__c</fullName>
    <inlineHelpText>Ingrese detalles adicionales en este campo (por ejemplo: indicaciones de cómo llegar a un lugar o la URL de un mapa). Se incluirán en los correos electrónicos recordatorios enviados de manera automática.</inlineHelpText>
    <label>Location Information</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>