force-app/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/GW_Volunteers__Number_of_Completed_Hours__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Number_of_Completed_Hours__c</fullName>
    <inlineHelpText>Número total de horas completas. No se incluyen las horas con otros valores de estado.</inlineHelpText>
    <label>Number of Completed Hours</label>
    <summarizedField>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Total_Hours_Worked__c</summarizedField>
    <summaryFilterItems>
        <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Volunteer_Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>