force-app/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/GW_Volunteers__Number_of_Volunteers__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Number_of_Volunteers__c</fullName>
    <inlineHelpText>Número total de Voluntarios cuyo Estado de Horas = Completas o Confirmadas</inlineHelpText>
    <label>Number of Volunteers</label>
    <summarizedField>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Number_of_Volunteers__c</summarizedField>
    <summaryFilterItems>
        <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
        <operation>equals</operation>
        <value>Confirmed, Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Volunteer_Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>