force-app/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/GW_Volunteers__Skills_Needed__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Skills_Needed__c</fullName>
    <inlineHelpText>Habilidades que el voluntario debe tener para realizar este trabajo</inlineHelpText>
    <label>Skills Needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Computer usage</fullName>
            </value>
            <value>
                <fullName>Manual Labor</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Fundraising</fullName>
            </value>
            <value>
                <fullName>Event Planning</fullName>
            </value>
            <value>
                <fullName>Landscaping</fullName>
            </value>
            <value>
                <fullName>basic accounting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>