force-app/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/GW_Volunteers__Volunteer_Website_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Volunteer_Website_Time_Zone__c</fullName>
    <inlineHelpText>Zona horaria a utilizar cuando se visualizan los tiempos de los turnos en los sitios personales.</inlineHelpText>
    <label>Volunteer Website Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pacific/Kiritimat</fullName>
            </value>
            <value>
                <fullName>Pacific/Chatham</fullName>
            </value>
            <value>
                <fullName>Pacific/Auckland</fullName>
            </value>
            <value>
                <fullName>Pacific/Enderbury</fullName>
            </value>
            <value>
                <fullName>Pacific/Tongatapu</fullName>
            </value>
            <value>
                <fullName>Asia/Kamchatka</fullName>
            </value>
            <value>
                <fullName>Pacific/Fiji</fullName>
            </value>
            <value>
                <fullName>Pacific/Norfolk</fullName>
            </value>
            <value>
                <fullName>Australia/Lord_Howe</fullName>
            </value>
            <value>
                <fullName>Australia/Sydney</fullName>
            </value>
            <value>
                <fullName>Pacific/Guadalcanal</fullName>
            </value>
            <value>
                <fullName>Australia/Adelaide</fullName>
            </value>
            <value>
                <fullName>Australia/Brisbane</fullName>
            </value>
            <value>
                <fullName>Australia/Darwin</fullName>
            </value>
            <value>
                <fullName>Asia/Seoul</fullName>
            </value>
            <value>
                <fullName>Asia/Tokyo</fullName>
            </value>
            <value>
                <fullName>Asia/Hong_Kong</fullName>
            </value>
            <value>
                <fullName>Asia/Kuala_Lumpur</fullName>
            </value>
            <value>
                <fullName>Asia/Manila</fullName>
            </value>
            <value>
                <fullName>Asia/Shanghai</fullName>
            </value>
            <value>
                <fullName>Asia/Singapore</fullName>
            </value>
            <value>
                <fullName>Asia/Taipei</fullName>
            </value>
            <value>
                <fullName>Australia/Perth</fullName>
            </value>
            <value>
                <fullName>Asia/Bangkok</fullName>
            </value>
            <value>
                <fullName>Asia/Jakarta</fullName>
            </value>
            <value>
                <fullName>Asia/Saigon</fullName>
            </value>
            <value>
                <fullName>Asia/Rangoon</fullName>
            </value>
            <value>
                <fullName>Asia/Dacca</fullName>
            </value>
            <value>
                <fullName>Asia/Yekaterinburg</fullName>
            </value>
            <value>
                <fullName>Asia/Katmandu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>